# apps/coffeeshop/src/Controllers/CoffeeController.cs
@@ -1,4 +1,4 @@
-// Copyright (c) Microsoft Corporation. All rights reserved.
+﻿// Copyright (c) Microsoft Corporation. All rights reserved.
 // Licensed under the MIT License. See LICENSE in the project root for license information.
 
 using System.Collections.Generic;
@@ -13,30 +13,40 @@ namespace CoffeeShop.Controllers
     /// <summary>
     /// Handle Coffees requests
     /// </summary>
-    [Route("api/v1/[controller]")]
+    [Route("api/v1/drinks/[controller]")]
     [Produces("application/json")]
-    public class CoffeesController : Controller
+    public class CoffeeController : Controller
     {
         private static readonly CseLog Logger = new ()
         {
-            Name = typeof(CoffeesController).FullName,
-            ErrorMessage = "CoffeesControllerException",
+            Name = typeof(CoffeeController).FullName,
+            ErrorMessage = $"{typeof(CoffeeController).FullName}Exception",
         };
 
         /// <summary>
         /// Get all Coffees
         /// </summary>
         /// <returns>IActionResult</returns>
-        [HttpGet(Name = "GetCoffees")]
-        [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(List<Coffee>))]
+        [HttpGet(Name = "GetCoffee")]
+        [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(List<Drink>))]
         [SwaggerOperation(Summary = "Get all Coffees", Description = "Get all Coffees")]
         public IActionResult GetCoffees()
         {
-            Logger.LogInformation("get", "GetCoffees");
+            Logger.LogInformation("get", "GetCoffee");
 
             Database db = new();
 
-            return Ok(db.Coffees.Values);
+            List<Drink> list = new();
+
+            foreach (var d in db.Drinks.Values)
+            {
+                if (d.Category == "Coffee")
+                {
+                    list.Add(d);
+                }
+            }
+
+            return Ok(list);
         }
     }
 }
