# apps/coffeeshop/src/Model/FoodItem.cs
@@ -13,6 +13,7 @@ namespace CoffeeShop.Model
     public string Id { get; set; }
     public string Name { get; set; }
     public double Price { get; set; }
+    public string Category { get; set; }
     public Dictionary<string, FoodItem> Ingredients { get; set; }
     public Dictionary<string, FoodItem> AddOns { get; set; }
 
