# apps/coffeeshop/src/Model/Inventory.cs
@@ -10,14 +10,10 @@ namespace CoffeeShop.Model
     /// </summary>
     public partial class Inventory
     {
-        public Dictionary<string, Coffee> Coffees { get; set; }
-        public Dictionary<string, Tea> Teas { get; set; }
         public Dictionary<string, Sweetener> Sweeteners { get; set; }
         public Dictionary<string, Milk> Milks { get; set; }
         public Dictionary<string, Size> Sizes { get; set; }
-        public Dictionary<string, FoodItem> Breakfast { get; set; }
-        public Dictionary<string, FoodItem> Lunch { get; set; }
-        public Dictionary<string, FoodItem> Snacks { get; set; }
+        public Dictionary<string, FoodItem> Food { get; set; }
         public Dictionary<string, Drink> Drinks { get; set; }
     }
 }
